manifests/base/catalog-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-app
  labels:
    app: catalog-app
    app.kubernetes.io/name: catalog-app
    app.kubernetes.io/part-of: lightwell-demo
spec:
  selector:
    app: catalog-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
